--- a/index.Rmd
+++ b/index.Rmd
@@ -16,136 +16,275 @@ output:
 #### Preprints
 
 **Hardwicke, T. E.**, Thibault, R. T., Clarke, B., Moodie, N., Crüwell, S., Schiavone, S. R., Handcock, S. A., Nghiem, K. A., Mody, F., Erole, T., & Vazire, S. (submitted). Prevalence of transparent research practices in psychology: A cross-sectional study of empirical articles published in 2022.  
-[[preprint]](https://osf.io/preprints/psyarxiv/t2zs9) [[preregistration]](https://osf.io/xh6mg) [[data]](https://osf.io/yck93/) [[materials]](https://osf.io/yck93/) [[analysis-code]](https://osf.io/yck93/) [[reproducible-container]](https://doi.org/10.24433/CO.5081898.v1)
+<a href="https://osf.io/preprints/psyarxiv/t2zs9" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/xh6mg" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/yck93/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/yck93/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/yck93/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.5081898.v1" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 Sandoval-Lentisco, A., Tortajada, M., López-Nicolás, R., López-López, J. A., Wagenmakers, E.J., Sánchez-Meca, J., & **Hardwicke, T. E.** (submitted). Preregistration of psychology meta-analyses: A cross-sectional study of prevalence and practice.  
-[[preprint]](https://osf.io/preprints/metaarxiv/627a4) [[preregistration]](https://osf.io/rnv5c) [[data]](https://osf.io/ru5h4/) [[materials]](https://osf.io/ru5h4/) [[analysis-code]](https://osf.io/ru5h4/)
+<a href="https://osf.io/preprints/metaarxiv/627a4" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/rnv5c" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/ru5h4/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/ru5h4/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/ru5h4/" class="btn btn-sm btn-code" role="button">analysis-code</a>
 
 Frank, M. C., Braginsky, M., Cachia, J., Coles, N., **Hardwicke, T. E.**, Hawkins, R., Mathur, M., & Williams, R. (in press). Experimentology: An open science approach to experimental psychology methods. MIT Press.  
-[[open access book]](https://experimentology.io)
+<a href="https://experimentology.io" class="btn btn-sm btn-paper" role="button">open access book</a>
 
 Fernández, L. M., **Hardwicke, T. E.**, & Vadillo, M. A. (preprint). Retracted papers clinging on to life: An observational study of post-retraction citations in psychology. *PsyArXiv*.  
-[[preprint]](https://doi.org/hcht) [[data]](https://osf.io/t73rk/) [[analysis-code]](https://osf.io/t73rk/)
+<a href="https://doi.org/hcht" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/t73rk/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/t73rk/" class="btn btn-sm btn-code" role="button">analysis-code</a>
 
 #### 2024
 
 **Hardwicke, T. E.**, Schiavone, S. R., Clarke, B., & Vazire, S. (in press). Finding the right words to evaluate research: An empirical appraisal of eLife’s assessment vocabulary [Registered Report]. *PLOS Biology*.  
-[[preprint]](https://doi.org/10.1101/2024.04.30.591844) [[preregistration]](https://doi.org/10.17605/OSF.IO/MKBTP) [[data]](https://osf.io/mw2q4/files/osfstorage) [[materials]](https://osf.io/mw2q4/files/osfstorage) [[analysis-code]](https://osf.io/mw2q4/files/osfstorage) [[reproducible-container]](https://doi.org/10.24433/CO.4128032.v1)
+<a href="https://doi.org/10.1101/2024.04.30.591844" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://doi.org/10.17605/OSF.IO/MKBTP" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/mw2q4/files/osfstorage" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/mw2q4/files/osfstorage" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/mw2q4/files/osfstorage" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.4128032.v1" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 Dulitzki, C., Crane, S. M., **Hardwicke, T. E.**, & Ioannidis, J. P. A. (2024). Expanding the Data Ark: An attempt to make the data from highly cited social science papers publicly available. *Royal Society Open Science*, *11*(5), 240016.  
-[[paper]](https://doi.org/10.1098/rsos.240016) [[preprint]](https://osf.io/preprints/metaarxiv/w9crz/) [[preregistration]](https://osf.io/697wx) [[data]](https://osf.io/3kuwq/) [[materials]](https://osf.io/3kuwq/) [[analysis-code]](https://osf.io/3kuwq/) [[reproducible-container]](https://doi.org/10.24433/CO.5136309.v2)
+<a href="https://doi.org/10.1098/rsos.240016" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://osf.io/preprints/metaarxiv/w9crz/" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/697wx" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/3kuwq/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/3kuwq/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/3kuwq/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.5136309.v2" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 #### 2023
 
 **Hardwicke, T. E.**, & Vazire, S. (2023). Transparency is now the default at Psychological Science [editorial]. *Psychological Science*.  
-[[paper]](https://doi.org/10.1177/09567976231221573)
+<a href="https://doi.org/10.1177/09567976231221573" class="btn btn-sm btn-paper" role="button">paper</a>
 
 Thibault, R. T., Kovacs, M., **Hardwicke, T. E.**, Sarafoglou, A., Ioannidis, J. P., & Munafo, M. R. (2023). Reducing bias in secondary data analysis via an Explore and Confirm Analysis Workflow (ECAW): A proposal and survey of observational researchers. *Royal Society Open Science*, *10*, 230568.  
-[[paper]](https://doi.org/10.1098/rsos.230568) [[preprint]](https://doi.org/10.31222/osf.io/md2xz) [[preregistration]](https://osf.io/g2fw5) [[data]](https://osf.io/x2dpn) [[materials]](https://osf.io/x2dpn) [[analysis-code]](https://osf.io/x2dpn)
+<a href="https://doi.org/10.1098/rsos.230568" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31222/osf.io/md2xz" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/g2fw5" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/x2dpn" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/x2dpn" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/x2dpn" class="btn btn-sm btn-code" role="button">analysis-code</a>
 
 **Hardwicke, T. E.**, & Wagenmakers, E.-J. (2023). Reducing bias, increasing transparency, and calibrating confidence with preregistration. *Nature Human Behaviour*, *7*, 15-26.  
-[[paper]](https://rdcu.be/c4h3a) [[preprint]](https://doi.org/10.31222/osf.io/d7bcu)
+<a href="https://rdcu.be/c4h3a" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31222/osf.io/d7bcu" class="btn btn-sm btn-preprint" role="button">preprint</a>
 
 **Hardwicke, T. E.**, Salholz-Hillel, M., Malički, M., Szűcs, D., Bendixen, T., Ioannidis, J. P. A. (2023). Statistical guidance to authors at top-ranked journals across scientific disciplines. *The American Statistician*. *77*(3), 239-247.  
-[[paper]](https://doi.org/10.1080/00031305.2022.2143897) [[preprint]](https://doi.org/10.31222/osf.io/q6ajt) [[preregistration]](https://osf.io/cz9g3/) [[data]](https://dx.doi.org/10.17605/OSF.IO/JRX7D) [[materials]](https://dx.doi.org/10.17605/OSF.IO/JRX7D) [[analysis-code]](https://dx.doi.org/10.17605/OSF.IO/JRX7D) [[reproducible-container]](https://doi.org/10.24433/CO.6131540.v1)
+<a href="https://doi.org/10.1080/00031305.2022.2143897" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31222/osf.io/q6ajt" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/cz9g3/" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/gr5v7/files/osfstorage" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/gr5v7/files/osfstorage" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/gr5v7/files/osfstorage" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.6131540.v1" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 #### 2022
 
 **Hardwicke, T. E.**, Thibault, R. T., Kosie, J. E., Tzavella, L., Bendixen, T., Handcock, S. A. Köneke, V. E., Ioannidis, J. P. A. (2022). Post-publication critique at top-ranked journals across scientific disciplines: A cross-sectional assessment of policies and practice. *Royal Society Open Science*, *9*, 220139.  
-[[paper]](https://dx.doi.org/10.1098/rsos.220139) [[preprint]](https://doi.org/hc7d) [[preregistration]](https://osf.io/hjvnw/) [[data]](https://osf.io/8b6jy/) [[materials]](https://osf.io/8b6jy/) [[analysis-code]](https://osf.io/8b6jy/) [[reproducible-container]](https://doi.org/10.24433/CO.3805142.v2) [[media1]](https://www.science.org/content/article/news-glance-new-gene-therapy-europe-s-drought-and-black-hole-s-photon-ring) [[media2]](https://www.timeshighereducation.com/news/worlds-top-journals-limiting-critiques) [[media3]](https://www.science.org/content/article/you-ve-spotted-flaw-top-journal-s-paper-good-luck-getting-your-critique-published)
+<a href="https://dx.doi.org/10.1098/rsos.220139" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/hc7d" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/hjvnw/" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/8b6jy/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/8b6jy/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/8b6jy/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.3805142.v2" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 TARG Meta-Research Group & Collaborators [Thibault, R. T., **Hardwicke, T. E.**, Clark, R. W. A., Pennington, C. R., Nilsonne, G., O'Mahony, A., Drax, K., Thompson, J., Munafò, M. R.] (2022). Discrepancy review: A feasibility study of a novel peer review intervention to reduce undisclosed discrepancies between registrations and publications. *Royal Society Open Science*, *9*, 220142.  
-[[paper]](https://doi.org/10.1098/rsos.220142) [[preprint]](https://doi.org/hdgv) [[preregistration]](https://osf.io/w3bkt/) [[data]](https://osf.io/25ebk/) [[materials]](https://osf.io/5dh47/files) [[analysis-code]](https://osf.io/25ebk/) [[reproducible-container]](https://doi.org/10.24433/CO.9942414.v1)
+<a href="https://doi.org/10.1098/rsos.220142" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/hdgv" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/w3bkt/" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/5dh47/files" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/25ebk/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/25ebk/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.9942414.v1" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 Nosek, B. A., **Hardwicke, T. E.**, Moshontz, H., Allard, A., Corker, K. S., Dreber, A., Fidler, F., Hilgard, J., Kline Struhl, M., Nuijten, M., Rohrer, J., Romero, F., Scheel., A., Scherer, L., Schönbrodt, F., & Vazire, S. (2022). Replicability, robustness, and reproducibility in psychological science. *Annual Review of Psychology*, *73*, 719-748.  
-[[paper]](http://www.annualreviews.org/eprint/BEG4HHRDH6R6UHSGU3YR/full/10.1146/annurev-psych-020821-114157) [[preprint]](https://doi.org/ftzw) [[preregistration]](https://osf.io/vg9zy) [[materials]](https://osf.io/7np92/) [[data]](https://osf.io/7np92/) [[analysis-code]](https://osf.io/7np92/) [[reproducible-container]](https://doi.org/10.24433/CO.4977248.v1)
+<a href="http://www.annualreviews.org/eprint/BEG4HHRDH6R6UHSGU3YR/full/10.1146/annurev-psych-020821-114157" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/ftzw" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/vg9zy" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/7np92/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/7np92/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/25ebk/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://osf.io/7np92/" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 **Hardwicke, T. E.**, Thibault, R. T., Kosie, J. E., Wallach, J. D., Kidwell, M. C., & Ioannidis, J. P. A. (2022). Estimating the prevalence of transparency and reproducibility-related research practices in psychology (2014-2017). *Perspectives on Psychological Science*, *17*(1), 239-251.  
-[[paper]](https://doi.org/10.1177%2F1745691620979806) [[preprint]](https://doi.org/10.31222/osf.io/9sz2y) [[preregistration]](https://osf.io/q96eh/) [[materials]](https://osf.io/c89sy/) [[data]](https://osf.io/5qmz7/) [[analysis-code]](https://osf.io/gfjtq/) [[reproducible-container]](https://doi.org/10.24433/CO.1618143.v2)
+<a href="https://doi.org/10.1177%2F1745691620979806" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31222/osf.io/9sz2y" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/q96eh/" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/c89sy/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/t9n3a/files/osfstorage" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/t2xu4/files/osfstorage" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.1618143.v2" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 #### 2021
 
 **Hardwicke, T. E.**, Szucs D., Thibault, R. T., Crüwell, S., van den Akker, O. R., Nuijten, M. B., & Ioannidis, J. P. A. (2021). Citation patterns following a strongly contradictory replication result: Four case studies from psychology. *Advances in Methods and Practices in Psychological Science*, *4*, 1-14.  
-[[paper]](https://doi.org/10.1177/25152459211040837) [[preprint]](https://doi.org/ftx5) [[preregistration]](https://osf.io/eh5qd/) [[materials]](https://osf.io/w8h2q/) [[data]](https://osf.io/w8h2q/) [[analysis-code]](https://osf.io/w8h2q/) [[reproducible-container]](https://doi.org/10.24433/CO.4225975.v3)
+<a href="https://doi.org/10.1177/25152459211040837" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/ftx5" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/eh5qd/" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/w8h2q/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/w8h2q/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/w8h2q/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.4225975.v3" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 **Hardwicke, T. E.**, Bohn, M., MacDonald, K., Hembacher, E., Nuijten, M. B., Peloquin, B. N., deMayo, B., Long, B., Yoon, E. J., & Frank, M. C. (2021). Analytic reproducibility in articles receiving open data badges at the journal Psychological Science: An observational study. *Royal Society Open Science*, *8*, 201494.  
-[[paper]](https://doi.org/fp2m) [[preprint]](https://doi.org/d3mz) [[preregistration]](https://osf.io/2cnkq/) [[materials]](https://osf.io/wy6a5/) [[data]](https://osf.io/tfd8z/) [[analysis-code]](https://osf.io/tfd8z/) [[reproducible-container]](https://doi.org/10.24433/CO.1796004.v3)
+<a href="https://doi.org/10.1098/rsos.201494" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/d3mz" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/2cnkq/" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/wy6a5/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/tfd8z/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/tfd8z/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.1796004.v3" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 #### 2020
 
 **Hardwicke, T. E.**, & Goodman, S. N. (2020). How often do leading biomedical journals use statistical experts to evaluate statistical methods? The results of a survey. *PLOS ONE*, *15*, e0239598.  
-[[paper]](https://dx.doi.org/10.1371%2Fjournal.pone.0239598) [[preprint]](https://doi.org/10.31222/osf.io/z27u4) [[materials]](https://doi.org/10.17605/osf.io/p7g8w) [[data]](https://doi.org/10.17605/osf.io/nscv3) [[analysis-code]](https://doi.org/10.17605/osf.io/dy6kj) [[reproducible-container]](https://doi.org/10.24433/CO.3883021.v1)
+<a href="https://dx.doi.org/10.1371%2Fjournal.pone.0239598" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31222/osf.io/z27u4" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://doi.org/10.17605/osf.io/p7g8w" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://doi.org/10.17605/osf.io/nscv3" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://doi.org/10.17605/osf.io/dy6kj" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.3883021.v1" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 **Hardwicke, T. E.**, Serghiou, S., Janiaud, P., Danchev, V., Crüwell, S., Goodman, S. N., & Ioannidis, J. P. A. (2020). Calibrating the scientific ecosystem through meta-research. *Annual Review of Statistics and its Application*, *7*, 11-37.  
-[[paper]](https://doi.org/10.1146/annurev-statistics-031219-041104) [[preprint]](https://doi.org/10.31222/osf.io/krb58)
+<a href="https://doi.org/10.1146/annurev-statistics-031219-041104" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31222/osf.io/krb58" class="btn btn-sm btn-preprint" role="button">preprint</a>
 
 Ferrero, M., **Hardwicke, T. E.**, Konstantinidis, E., & Vadillo, M. A. (2020). The effectiveness of refutation texts to correct misconceptions among educators. *Journal of Experimental Psychology: Applied*, *26*, 411-421.  
-[[paper]](https://psycnet.apa.org/doi/10.1037/xap0000258) [[preprint]](https://doi.org/10.31234/osf.io/ehybj) [[materials]](https://osf.io/73a9y/) [[data]](https://osf.io/sg6jy/) [[analysis-code]](https://osf.io/pxv5b/)
+<a href="https://psycnet.apa.org/doi/10.1037/xap0000258" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31234/osf.io/ehybj" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/73a9y/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/sg6jy/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/pxv5b/" class="btn btn-sm btn-code" role="button">analysis-code</a>
 
 **Hardwicke, T. E.**, Wallach, J. D., Kidwell, M. C., Bendixen, T., Crüwell, S., & Ioannidis, J. P. A. (2020). An empirical assessment of transparency and reproducibility-related research practices in the social sciences (2014-2017). *Royal Society Open Science*, *7*, 190806.  
-[[paper]](https://dx.doi.org/10.1098/rsos.190806)
-[[preprint]](https://doi.org/10.31222/osf.io/6uhg5) [[preregistration]](https://osf.io/u5bk9/) [[materials]](https://osf.io/z9qtr/) [[data]](https://osf.io/u9fw8/) [[analysis-code]](https://osf.io/sbrez/) [[reproducible-container]](https://doi.org/10.24433/CO.2749769.v2)
+<a href="https://dx.doi.org/10.1098/rsos.190806" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31222/osf.io/6uhg5" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/u5bk9/" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/z9qtr/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/u9fw8/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/sbrez/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.2749769.v2" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 #### 2019
 
 **Hardwicke, T. E.**, & Ioannidis, J. P. A. (2019). Petitions in scientific argumentation: dissecting the request to retire statistical significance. *European Journal of Clinical Investigation*, *49*, e13162.  
-[[paper]](https://doi.org/10.1111/eci.13162) [[preprint]](https://doi.org/10.31222/osf.io/73xm5) [[preregistration]](https://osf.io/hbkj3/) [[materials]](https://osf.io/u7nx4/) [[data]](https://osf.io/6a94k/) [[analysis-code]](https://osf.io/jpztm/) [[reproducible-container]](https://doi.org/10.24433/CO.3912558.v1) [[comment1]](https://doi.org/10.1111/eci.13165) [[comment2]](https://doi.org/10.1111/eci.13170) [[comment3]](https://doi.org/10.1111/eci.13176)
+<a href="https://doi.org/10.1111/eci.13162" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31222/osf.io/73xm5" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/hbkj3/" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/u7nx4/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/6a94k/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/jpztm/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.3912558.v1" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
+<a href="https://doi.org/10.1111/eci.13165" class="btn btn-sm btn-paper" role="button">comment#1</a>
+<a href="https://doi.org/10.1111/eci.13170" class="btn btn-sm btn-paper" role="button">comment#2</a>
+<a href="https://doi.org/10.1111/eci.13176" class="btn btn-sm btn-paper" role="button">comment#3</a>
 
 Nosek, B. A., Beck, E. D., Campbell, L., Flake, J. K., **Hardwicke, T. E.**, Mellor, D. T., van ‘t Veer, A. E., & Vazire, S. (2019). Preregistration is hard, and worthwhile. *Trends in Cognitive Sciences*, *23*, 815-818.  
-[[paper]](https://doi.org/10.1016/j.tics.2019.07.009) [[preprint]](https://doi.org/10.31234/osf.io/wu3vs)
+<a href="https://doi.org/10.1016/j.tics.2019.07.009" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31234/osf.io/wu3vs" class="btn btn-sm btn-preprint" role="button">preprint</a>
 
 **Hardwicke, T. E.**, Frank, M. C., Vazire, S., & Goodman, S. N. (2019). Should psychology journals adopt specialized statistical review? *Advances in Methods and Practices in Psychological Science*, *2*, 240-249.  
-[[paper]](https://doi.org/10.1177/2515245919858428) [[materials]](https://osf.io/tmah8/files/) [[data]](https://osf.io/nquws/files/) [[analysis-code]](https://osf.io/4zurk/files/) [[reproducible-container]](https://doi.org/10.24433/CO.8241121.v3) [[media]](https://www.psychologicalscience.org/publications/observer/obsonline/strengthening-psychological-science-with-specialized-statistical-review.html?utm_source=tw&utm_medium=social&utm_campaign=AMPPSstatisticalreview)
+<a href="https://doi.org/10.1177/2515245919858428" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://osf.io/tmah8/files/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/nquws/files/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/4zurk/files/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.8241121.v3" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 #### 2018
 
 **Hardwicke, T. E.** & Ioannidis, J. P. A. (2018). Mapping the universe of registered reports. *Nature Human Behaviour*, *2*, 793–796.  
-[[paper]](https://rdcu.be/8eBP) [[materials]](https://osf.io/uzegq/) [[data]](https://osf.io/rv7eb/) [[analysis-code]](https://osf.io/uzfjp/) [[reproducible-container]](https://doi.org/10.24433/CO.03fa2564-3910-4982-9882-4f2fcec50385.v3) [[preprint]](https://dx.doi.org/10.17605/OSF.IO/FZPCY) [[comment]](https://doi.org/10.1038/s41562-018-0449-6) [[comment2]](https://doi.org/10.1038/s41562-018-0477-2)
+<a href="https://rdcu.be/8eBP" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://dx.doi.org/10.17605/OSF.IO/FZPCY" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/uzegq/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/rv7eb/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/uzfjp/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.03fa2564-3910-4982-9882-4f2fcec50385.v3" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
+<a href="https://doi.org/10.1038/s41562-018-0449-6" class="btn btn-sm btn-paper" role="button">comment#1</a>
+<a href="https://doi.org/10.1038/s41562-018-0477-2" class="btn btn-sm btn-paper" role="button">comment#2</a>
 
 **Hardwicke, T. E.**, Mathur, M. B., MacDonald, K., Nilsonne, G., Banks, G. C., Kidwell, M. C., Hofelich Mohr, A., Clayton, E., Yoon, E. J., Henry Tessler, M., Lenne, R. L., Altman, S., Long, B., & Frank, M. C. (2018). Data availability, reusability, and analytic reproducibility: Evaluating the impact of a mandatory open data policy at the journal Cognition. *Royal Society Open Science*, *5*, 180448.  
-[[paper]](https://dx.doi.org/10.1098/rsos.180448) [[preprint]](https://dx.doi.org/10.17605/OSF.IO/39CFB) [[preregistration]](https://osf.io/q4qy3/) [[materials]](https://osf.io/k2mdr/) [[data]](https://osf.io/6s8b3/) [[analysis-code]](https://osf.io/wf3as/) [[reproducible-container]](https://doi.org/10.24433/CO.abd8b483-c5e3-4382-a493-1fc5aecb0f1d.v2)  [[blog1]](https://tomhardwicke.netlify.app/blog/psychology-reproducibility/) [[blog2]](https://tomhardwicke.netlify.app/blog/open-data-reusability/) [[comment]](https://doi.org/10.1016/j.cognition.2018.10.008)
+<a href="https://dx.doi.org/10.1098/rsos.180448" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://dx.doi.org/10.17605/OSF.IO/39CFB" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/q4qy3/" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/k2mdr/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/6s8b3/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/wf3as/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.abd8b483-c5e3-4382-a493-1fc5aecb0f1d.v2" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
+<a href="https://doi.org/10.1016/j.cognition.2018.10.008" class="btn btn-sm btn-paper" role="button">comment</a>
 
 **Hardwicke, T. E.** & Ioannidis, J. P. A. (2018). Populating the Data Ark: An attempt to retrieve, preserve, and liberate data from the most highly-cited psychology and psychiatry articles. *PLOS ONE*, *13*, e0201856.  
-[[paper]](https://doi.org/10.1371/journal.pone.0201856) [[materials]](https://osf.io/4dum6/) [[data]](https://osf.io/r38qu/) [[analysis-code]](https://osf.io/7syrt/) [[reproducible-container]](https://doi.org/10.24433/CO.241ffbb1-5b81-44bd-94f4-d066b62c5f7f.v2)
+<a href="https://doi.org/10.1371/journal.pone.0201856" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://osf.io/4dum6/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/r38qu/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/7syrt/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.241ffbb1-5b81-44bd-94f4-d066b62c5f7f.v2" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 **Hardwicke, T. E.**, Henry Tessler, M., Peloquin, B., & Frank, M. C. (2018). A Bayesian decision-making framework for replication. *Behavioral and Brain Sciences*, *41*, e132.  
-[[paper]](https://doi.org/10.1017/S0140525X18000675) [[preprint]](https://dx.doi.org/10.17605/OSF.IO/N3YAH)
+<a href="https://doi.org/10.1017/S0140525X18000675" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://dx.doi.org/10.17605/OSF.IO/N3YAH" class="btn btn-sm btn-preprint" role="button">preprint</a>
 
 Klein, O., **Hardwicke, T. E.**, Aust, F., Breuer, J., Danielsson, H., Hofelich Mohr, A., IJzerman, H., Nilsonne, G., Vanpaemel, W., & Frank, M. C. (2018). A practical guide for transparency in psychological science. *Collabra: Psychology*, *4*, 20.  
-[[paper]](https://doi.org/10.1525/collabra.158) [[materials]](https://osf.io/xf6ug/)
+<a href="https://doi.org/10.1525/collabra.158" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://osf.io/xf6ug/" class="btn btn-sm btn-mat" role="button">materials</a>
 
 #### 2017
 
 Cristea, I. A., Naudet, F., Shanks, D. R., & **Hardwicke, T. E.** (2017). Post-retrieval Tetris should not be likened to a ‘cognitive vaccine’. *Molecular Psychiatry*, *23*, 1972-1973.  
-[[paper]](https://dx.doi.org/10.1038/mp.2017.222) [[pdf]](files/Cristea_tetris_2017.pdf) [[data]](https://osf.io/nwz9j/) [[analysis-code]](https://osf.io/p3z58/)
+<a href="https://dx.doi.org/10.1038/mp.2017.222" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://osf.io/nwz9j/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/p3z58/" class="btn btn-sm btn-code" role="button">analysis-code</a>
 
 #### 2016
 
 Kidwell, M. C., Lazarević, L. B., Baranski, E., **Hardwicke, T. E.**, Piechowski, S., Falkenberg, L-S., Kennett, C., Slowik, A., Sonnleitner, C., Hess-Holden, C., Errington, T. M., Fiedler, S., & Nosek, B. A. (2016). Badges to acknowledge open practices: A simple, low cost, effective method for increasing transparency. *PLOS Biology*, *14*, e1002456.  
-[[paper]](https://dx.doi.org/10.1371/journal.pbio.1002456) [[preregistration]](https://osf.io/3upzh/) [[materials]](https://osf.io/8kt4b/) [[data]](https://osf.io/u6g7t/) [[analysis-code]](https://osf.io/257kv/)
+<a href="https://dx.doi.org/10.1371/journal.pbio.1002456" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="https://doi.org/10.31222/osf.io/6uhg5" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/3upzh/" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/8kt4b/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/u6g7t/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/257kv/" class="btn btn-sm btn-code" role="button">analysis-code</a>
 
 **Hardwicke, T. E.** & Shanks, D. R. (2016). Reply to Walker and Stickgold: Proposed boundary conditions on memory reconsolidation will require empirical verification. *PNAS*, *113*, E3993-E3994.  
-[[paper]](https://dx.doi.org/10.1073/pnas.1608235113) [[pdf]](files/sequenceReconReply.pdf)
+<a href="https://dx.doi.org/10.1073/pnas.1608235113" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="files/sequenceReconReply.pdf" class="btn btn-sm btn-paper" role="button">pdf</a>
 
 **Hardwicke, T. E.**, Mahdi, T., & Shanks, D. R. (2016). Post-retrieval new learning does not reliably induce human memory updating via reconsolidation. *PNAS*, *113*, 5206-5211.  
-[[paper]](https://dx.doi.org/10.1073/pnas.1601440113) [[pdf]](files/sequenceRecon.pdf) [[materials]](https://osf.io/xyf34/) [[data]](https://osf.io/bm47u/) [[analysis-code]](https://osf.io/se6gb/) [[comment]](https://doi.org/10.1073/pnas.1607964113) [[media]](https://blogs.discovermagazine.com/neuroskeptic/2016/05/19/does-reconsolidation-exist/)
+<a href="https://dx.doi.org/10.1073/pnas.1601440113" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="files/sequenceRecon.pdf" class="btn btn-sm btn-paper" role="button">pdf</a>
+<a href="https://doi.org/10.31222/osf.io/6uhg5" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/xyf34/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/bm47u/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/se6gb/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.1073/pnas.1607964113" class="btn btn-sm btn-paper" role="button">analysis-code</a>
 
 Vadillo, M. A., **Hardwicke, T. E.**, & Shanks, D. R. (2016). Selection bias, vote counting, and money priming effects: A comment on Rohrer, Pashler, and Harris (2015) and Vohs (2015). *Journal of Experimental Psychology: General*, *145*, 655-663.  
-[[paper]](https://dx.doi.org/10.1037/xge0000157) [[pdf]](files/moneyPriming.pdf) [[data]](https://osf.io/4e3gy/) [[media]](https://blogs.discovermagazine.com/neuroskeptic/2016/04/23/publication-bias-in-money-priming/)
+<a href="https://dx.doi.org/10.1037/xge0000157" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="files/moneyPriming.pdf" class="btn btn-sm btn-paper" role="button">pdf</a>
+<a href="https://osf.io/4e3gy/" class="btn btn-sm btn-data" role="button">data</a>
 
 **Hardwicke, T. E.** (2016). Persistence and plasticity in the human memory system: An empirical investigation of the overwriting hypothesis. *PhD Thesis*.  
-[[thesis]](https://dx.doi.org/10.17605/OSF.IO/R4C32) [[data]](https://osf.io/rxtgs/) [[analysis-code]](https://osf.io/rxtgs/) [[osf]](https://osf.io/rxtgs/)
+<a href="https://dx.doi.org/10.17605/OSF.IO/R4C32" class="btn btn-sm btn-paper" role="button">thesis</a>
+<a href="https://osf.io/rxtgs/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/rxtgs/" class="btn btn-sm btn-code" role="button">analysis-code</a>
 
 #### Before 2016 {#pre-2016}
 
 Baker, R., Dexter, M., **Hardwicke, T. E.**, Goldstone, A., & Kourtzi, Z. (2014). Learning to predict: Exposure to temporal sequences facilitates prediction of future events. *Vision Research*, *99*, 124-133.  
-[[paper]](https://dx.doi.org/10.1016/j.visres.2013.10.017) [[pdf]](files/learningToPredict.pdf)
+<a href="https://dx.doi.org/10.1016/j.visres.2013.10.017" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="files/learningToPredict.pdf" class="btn btn-sm btn-paper" role="button">pdf</a>
 
 Ludwig, C. J. H., Farrell, S., Ellis, L. A., **Hardwicke, T. E.**, & Gilchrist, I. D. (2012). Context-gated statistical learning and its role in visual-saccadic decisions. *Journal of Experimental Psychology: General*, *141*, 150-169.  
-[[paper]](https://dx.doi.org/10.1037/a0024916) [[pdf]](files/contextGatedSL.pdf)
+<a href="https://dx.doi.org/10.1037/a0024916" class="btn btn-sm btn-paper" role="button">paper</a>
+<a href="files/contextGatedSL.pdf" class="btn btn-sm btn-paper" role="button">pdf</a>
 
 **Hardwicke, T. E.**, Jameel, L., Jones, M., Walczak, E. J., & Magis-Weinberg, L. (2014). Only human: Scientists, systems, and suspect statistics. *Opticon1826*, *16*, 1-12.  
-[[paper]](https://dx.doi.org/10.5334/opt.ch) [[pdf]](files/onlyHuman.pdf)
+<a href="files/onlyHuman.pdf" class="btn btn-sm btn-paper" role="button">pdf</a>
 
 **Hardwicke, T. E.** (2012). Biological Psychology. *Psychology Learning & Teaching*, *11*, 112-113.  
-[[paper]](https://dx.doi.org/10.2304/plat.2012.11.1.106)
+<a href="https://dx.doi.org/10.2304/plat.2012.11.1.106" class="btn btn-sm btn-paper" role="button">paper</a>
